infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rb
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/load-balance: "round_robin"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5s"
  # nginx.ingress.kubernetes.io/limit-rpm: "200"                                caso algum dia deseje limitar o número de requisições
spec:
  ingressClassName: nginx
  rules:
    - host: rebu.com.io || localhost || 127.0.1
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: &backend-target
              name: rebu-backend-service
              port:
                number: 3001
    - host: localhost
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service: *backend-target
